<!--
  ~ Copyright © 2016 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
  <string name="app_name">RST Checklist</string>
  <string name="about_text">This app contains code that is \u00A9 Google</string>
  <string name="about">About</string>
  <string name="apache_license_link"><a href="https://raw.githubusercontent.com/g11x/checklistapp/master/LICENSE">Licensed under Apache 2.0</a></string>
  <string name="get_social_security_card">Get social security card</string>
  <string name="description_text">Description text.</string>
  <string name="get_directions">Get directions</string>
  <string name="mark_as_done">Mark as done</string>
  <string name="title">Title</string>
  <string name="create">Create</string>
  <string name="created_important_information_item">Created %s</string>
  <string name="navdrawer_item_checklist">Checklist</string>
  <string name="navdrawer_item_important_info">Notes</string>
  <string name="navdrawer_item_notifications">Notifications</string>
  <string name="navdrawer_item_language">Language</string>
  <string name="navdrawer_item_about">About</string>
  <string name="title_activity_notification_list">Notifications</string>
  <string name="action_settings">Settings</string>
  <string name="content_not_yet_loaded">Content not yet loaded</string>
  <string name="important_information_empty">Put important info here…</string>
  <string name="welcome_to_austin">Welcome to Austin!</string>
  <string name="welcome_paragraph">We\'re happy you\'re here! We\'d like to help you get settled in your new home, so we\'ve put together a list of tasks to complete, and we\'ll send you occasional updates from Refugee Services of Texas.</string>
  <string name="send_email">Send e-mail</string>
  <string name="call">Call</string>
  <string name="sent_from_rst_checklist_app">Sent from RST Checklist app. </string>
  <string name="complete">Completed</string>
  <string name="sent_on">Sent on %s</string>
</resources>
