<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2016 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checklist_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g11x.checklistapp.ChecklistItemActivity">

  <ScrollView
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toTopOf="@+id/action_wrapper"
      app:layout_constraintTop_toTopOf="@id/checklist_item"
      android:requiresFadingEdge="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:layout_height="wrap_content"
          android:id="@+id/name"
          android:text="@string/get_social_security_card"
          android:textAppearance="@android:style/TextAppearance.Material.Headline"
          android:textAlignment="center"
          android:layout_width="wrap_content"
          android:paddingLeft="20dp"
          android:paddingRight="20dp"
          tools:targetApi="lollipop"
          android:layout_marginTop="20dp"/>

      <TextView
          style="@style/AppDescriptionTextStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/description_text"
          android:id="@+id/description"
          android:layout_marginTop="20dp"
          android:paddingLeft="@dimen/title_padding"
          android:paddingRight="@dimen/title_padding"
          android:layout_gravity="center_vertical|end"
          android:layout_below="@+id/name"
          />
    </RelativeLayout>
  </ScrollView>

  <RelativeLayout
      android:id="@+id/action_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/checklist_item"
      app:layout_constraintLeft_toLeftOf="@+id/checklist_item"
      app:layout_constraintLeft_toRightOf="@+id/checklist_item">

    <Button
        style="@style/AppActionButtonStyle"
        android:text="@string/send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:id="@+id/send_email"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"/>

    <Button
        style="@style/AppActionButtonStyle"
        android:text="@string/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:id="@+id/call"
        android:layout_below="@+id/send_email"
        android:drawableStart="@drawable/ic_call_black_24dp"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:drawablePadding="10dp"/>

    <Button
        style="@style/AppActionButtonStyle"
        android:text="@string/get_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:id="@+id/directions"
        android:layout_below="@+id/call"
        android:drawableStart="@drawable/ic_room_black_24dp"
        android:drawableLeft="@drawable/ic_room_black_24dp"
        android:drawablePadding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/directions">

      <Button
          android:id="@+id/doneness"
          style="@style/AppActionButtonStyle"
          android:text="@string/mark_as_done"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="start|center_vertical"
          android:drawableStart="@drawable/ic_check_box_accent_24dp"
          android:drawableLeft="@drawable/ic_check_box_accent_24dp"
          android:drawablePadding="10dp"/>
    </RelativeLayout>
  </RelativeLayout>

</android.support.constraint.ConstraintLayout>
