<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2016 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.constraint.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/main_content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      tools:context="com.g11x.checklistapp.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/main_content"
        app:layout_constraintTop_toTopOf="@+id/main_content"
        app:layout_constraintVertical_bias="0.5">

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_name"
          android:textSize="24sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="@+id/main_content"
          app:layout_constraintLeft_toLeftOf="@+id/main_content"
          app:layout_constraintRight_toRightOf="@+id/main_content"
          app:layout_constraintTop_toTopOf="@+id/main_content"/>

      <TextView
          android:id="@+id/all_code_copy_google"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:background="@android:color/transparent"
          android:ems="10"
          android:gravity="center"
          android:text="@string/about_text"
          app:layout_constraintLeft_toLeftOf="@+id/main_content"
          app:layout_constraintRight_toRightOf="@+id/main_content"
          app:layout_constraintTop_toBottomOf="@+id/textView"/>

      <TextView
          android:id="@+id/apache_license_link"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/apache_license_link"
          app:layout_constraintLeft_toLeftOf="@+id/main_content"
          app:layout_constraintRight_toRightOf="@+id/main_content"
          app:layout_constraintTop_toBottomOf="@+id/all_code_copy_google"/>
    </LinearLayout>


  </android.support.constraint.ConstraintLayout>

  <include layout="@layout/drawer" />

</android.support.v4.widget.DrawerLayout>


